--- a/backend/app/static/templates/download.html
+++ b/backend/app/static/templates/download.html
@@ -46,7 +46,7 @@
       .subtitle {
         font-size: 14px;
         color: #555;
-        margin-top: 10px;
+        margin-top: 5px;
       }
     </style>
   </head>
@@ -60,7 +60,11 @@
       />
       <h1>Descargar Aplicación</h1>
 
-      <a class="btn" href="{{ android_url }}">Descargar para Android</a>
+      <div>
+        <a class="btn" href="{{ android_url }}">Descargar para Android</a>
+        <p class="subtitle">Requiere Android 10 o superior.</p>
+        <p class="subtitle">! En versiones más antiguas no se ha probado <br/>por lo que puede contener errores.</p>
+      </div>
 
       <div>
         {% if ios_url %}
